# project-witch

./: .gitignore  CMakeLists.txt  Makefile  readme.md
Engine/: CMakeLists.txt
Engine/shaders/: main.frag  main.vert  shadow.frag  shadow.vert
Engine/shaders/includes/: light.h  materials.h
Engine/src/: SoulShard.cpp  SoulShard.h  soulsshard.cpp
Engine/src/Editor/: Editor.cpp  Editor.h  NodeEditor.cpp  NodeEditor.h  Viewport.cpp
Engine/src/Geomtry/: MeshLoading.cpp  ObjLoading.cpp  USDLoading.cpp
Engine/src/InputHandling/: InputHandling.cpp  InputHandling.h  KeyDefines.h
Engine/src/Physics/: JoltImpl.cpp  JoltImpl.h  Physics.cpp  PhysicsTest.cpp
Engine/src/Scene/: Scene.cpp  Scene.h
Engine/src/Vulkan/: Buffers.cpp  CommandBuffer.cpp  GraphicsPipeline.cpp  Images.cpp  Presentation.cpp  Sync.cpp  VkRenderer.cpp  VkRenderer.h  descriptor.cpp  vkRenderer.cpp  vkRenderer.h
Engine/src/types/: CommonTypeMath.cpp  ECS.cpp  ECS.h  ECS_UI.h  Timer.cpp  Vertex.cpp  defines.h  prints.cpp  types.h
Game/: CMakeLists.txt
Game/Assets/: cube.mtl  test.mtl
Game/Assets/Sponza/: sponza.mtl
Game/Assets/sportsCar/: sportsCar.mtl
Game/Assets/textures/: Image_3.png~
Game/src/: main.cpp
